--- a/src/utils/custom-radio/custom-radio.scss
+++ b/src/utils/custom-radio/custom-radio.scss
@@ -15,7 +15,7 @@
   .custom-radio-icon {
     width: 20px;
     height: 20px;
-    border: 2px solid var(--color-text-gray);
+    border: 1px solid var(--color-text-gray);
     border-radius: 50%;
     display: inline-block;
     position: relative;
